plugin youtube e altre amenità

--- a/_posts/2021-09-25-data-driven-marketing.html
+++ b/_posts/2021-09-25-data-driven-marketing.html
@@ -141,7 +141,7 @@ tags: OldButGold
       creatività?</span></p>
   <div class="captioned-image-container">
            <img
-              src="/images/posts/datadriven003.webp"
+              src="/images/posts/datadriven004.webp"
               
             loading="lazy" class="sizing-normal" alt="Investimenti fuori dalla comfort zone spostano l'asse" /> 
        
@@ -175,14 +175,8 @@ tags: OldButGold
   </div>
   <h2 class="header-anchor-post">Dj Morloi consiglia…
   </h2>
-  <div id="youtube2-5DQiexiUjAs"
-    data-attrs="{&quot;videoId&quot;:&quot;5DQiexiUjAs&quot;,&quot;startTime&quot;:null,&quot;endTime&quot;:null}"
-    data-component-name="Youtube2ToDOM" class="youtube-wrap">
-    <div class="youtube-inner"><iframe
-        src="https://www.youtube-nocookie.com/embed/5DQiexiUjAs?rel=0&amp;autoplay=0&amp;showinfo=0&amp;enablejsapi=0"
-        frameborder="0" loading="lazy" gesture="media" allow="autoplay; fullscreen" allowautoplay="true"
-        allowfullscreen="true" width="728" height="409"></iframe></div>
-  </div>
+  {% youtube 5DQiexiUjAs %}
+  
   <p><strong><span>Silver Apples</span><br></strong><span>Forse non esiste davvero un gruppo più seminale dei Silver
       Apples: musica elettro pop e glitch, ma fatta con strumenti fatti in casa, negli anni 60. Una storia incredibile,
       un gruppo da riscoprire, o da scoprire ex-novo</span></p>
