--- a/_posts/2021-12-05-la-crisi-di-mezzaeta.html
+++ b/_posts/2021-12-05-la-crisi-di-mezzaeta.html
@@ -193,14 +193,8 @@ tag: OldButGold
     </div>
     <h2 class="header-anchor-post">Dj Morloi consiglia…
     </h2>
-    <div id="youtube2-F5tSoaJ93ac"
-      data-attrs="{&quot;videoId&quot;:&quot;F5tSoaJ93ac&quot;,&quot;startTime&quot;:null,&quot;endTime&quot;:null}"
-      data-component-name="Youtube2ToDOM" class="youtube-wrap">
-      <div class="youtube-inner"><iframe
-          src="https://www.youtube-nocookie.com/embed/F5tSoaJ93ac?rel=0&amp;autoplay=0&amp;showinfo=0&amp;enablejsapi=0"
-          frameborder="0" loading="lazy" gesture="media" allow="autoplay; fullscreen" allowautoplay="true"
-          allowfullscreen="true" width="728" height="409"></iframe></div>
-    </div>
+    {% youtube F5tSoaJ93ac %}
+    
     <p><strong>Image Dragons &amp; JID - Enemy</strong></p>
     <p><span>Ok, è una roba un po’ fuori dal mio target solito, ma è </span><strong>esemplificativo di quanto dicevo
         sopra</strong><span>: Arcane è una meraviglia </span><strong>non solo tecnologica</strong><span>, ma
