altro articolo e tags

--- a/_posts/2021-09-25-data-driven-marketing.html
+++ b/_posts/2021-09-25-data-driven-marketing.html
@@ -3,7 +3,7 @@ layout: post
 title:  "Il Data-driven marketing è la tomba della creatività."
 date:   2021-09-25 05:59:17 +0200
 categories: pensieri
-tags: OldButGold
+tags: ["OldButGold","Marketing"]
 ---
 <h2>Ma non solo, probabilmente del mercato stesso: giocare a fare gli psicostorici del marketing uccide ogni prospettiva di innovazione.</h2>
 <i>Questi post arrivano da una vecchia newsletter, ripescati accuratamente perché ritengo che abbiano ancora un valore. Non sono stati editati, per cui possono contenere riferimenti ormai obsoleti: anche dell'obsolescenza, oramai praticamente istantanea, dovremmo parlare, a lungo.</i>
