--- a/_posts/2021-12-05-la-crisi-di-mezzaeta.html
+++ b/_posts/2021-12-05-la-crisi-di-mezzaeta.html
@@ -3,7 +3,7 @@ layout: post
 title:  "La crisi di mezz’età di Internet, piattaforme, persone, generazioni, strumenti."
 date:   2021-12-05 05:59:17 +0200
 categories: pensieri
-tag: OldButGold
+tags: ["OldButGold","Internet"]
 ---
 
 <i>Questi post arrivano da una vecchia newsletter, ripescati accuratamente perché ritengo che abbiano ancora un valore. Non sono stati editati, per cui possono contenere riferimenti ormai obsoleti: anche dell'obsolescenza, oramai praticamente istantanea, dovremmo parlare, a lungo.</i>
