altro articolo e tags

--- a/_posts/2021-07-24-permanenza-e-persistenza.html
+++ b/_posts/2021-07-24-permanenza-e-persistenza.html
@@ -3,7 +3,7 @@ layout: post
 title:  "Permanenza e Persistenza."
 date:   2021-07-25 05:59:17 +0200
 categories: pensieri
-tags: ["OldButGold","Internet"]
+tags: ["oldbutgold","internet"]
 ---
 <p><span>Salve, io sono&nbsp;</span><strong>Alessandro “Morloi” Grazioli</strong><span>&nbsp;e questa
     è&nbsp;</span><strong>Ex-perimentia</strong><span>, il diario di un vecchio brontolone che guarda l’internet ed il
